[package]
name = "evergreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = {version="0.3.61", features=["Element", "Window", "console", "Document", 'HtmlElement', 'Node','Window', "Event", "Text"]}
