[package]
name = "evergreen-core"
categories = ["gui", "wasm", "web-development"]
description = "Core functionality of evergreen"
version = "0.1.0"
edition = "2021"
keywords = ["wasm", "gui", "reactive"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-macro = "0.2.2"
leptos_reactive = "0.2.4"
sycamore = "0.8.2"
wasm-bindgen = "0.2.84"
web-sys = {version="0.3.61", features=["Element", "Window", "console", "Document", 'HtmlElement', 'Node','Window', "Event", "Text", "HtmlCollection"]}